# proxy-local

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml
redirect/: __init__.py  cli.py  config.py  models.py  proxy.py
scripts/: install_with_briefcase.sh
tests/: __init__.py  test_redirect.py
